<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ScrollView android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:text="@string/app_name"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextLabel" >

                <EditText android:id="@+id/login_edittext"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textSize="16dp"
                          android:textColor="@android:color/white"
                          android:hint="@string/login_hint"
                          android:inputType="textNoSuggestions" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_passlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextLabel" >

                <EditText android:id="@+id/pass_edittext"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textSize="16dp"
                          android:textColor="@android:color/white"
                          android:hint="@string/pass_hint"
                          android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_action"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:theme="@style/ButtonTheme"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout android:id="@+id/login_progress_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:paddingTop="20dp"
          android:paddingBottom="20dp"
          android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center_vertical"
            android:weightSum="1.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_progress_text"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginBottom="10dp"/>

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.5" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

